FlightPath 6.x Changelog
========================

2021-05-25
  Added schools module to core, and made changes to system.install as well as other .install files, so that tables
  now have a school_id field and needed keys.
  

2021-05-16
  Added lots of changes to student search. We now can see Academic Priority.  Uses pager query and table sort as well.  No
  more limit on 300 students, since we can do pager.  Made table headers responsive, as well as priority vals.


2021-05-11
  Added ability to have custom logout messages.
  

2021-05-09
  Added "last_login" column to users table, and to users screen in admin console.  Also make it so the "contact FlightPath production team" link
  does not appear if no email address is entered.
  

2021-05-05
  In the school settings form, you may now choose to sort courses in degrees and groups not by alphabetical, but by the order
  in which they were entered.


2021-05-04
  Added fields to groups and group_requirements tables (incl. draft_) to facilitate public notes in groups,
  as well as "attributes" on a per-requirement level.
  
  Changed popup description to use fp_alert() function, with base64 encoding so we don't have to worry
  about trouble characters, and can enter HTML as well.
  

2021-04-21
  Made it simpler to define "unavailable days" for scheduling appointments.
  
  Fixed unavailable times table to look cleaner and easier to understand.

2021-04-20
  Making sure we log incorrect login attempts.
  

2021-04-06
  Fixing up blank degrees module, make it show if user has permission.
  
  Added masquerade module to core, permits searching by partial email and lastname now.
  

2021-04-05
  Making new degrees "allow dynamic" by default.
  
  Removing outdated settings variables.
  
  Documentation for content module.  Fleshed out the basic page content type as well.
  

2021-03-14
  Removing "blocks" module from Core.
  
  Adding various modules to core.
  

2021-02-20