@@ -338,10 +338,10 @@ span.advise-checkbox-retake-checked {
 
 .full_admin_top_options
 {
-	font-size: 10pt;
-	border: 1px solid maroon;
-	padding: 2px;
-	margin-left: 10px;
+  font-size: 10pt;
+  border: 1px solid maroon;
+  padding: 2px;
+  margin-left: 10px;
 }
 
 
@@ -362,10 +362,10 @@ th {
 
 .admin-message
 {
-	padding: 5px;
-	margin: 5px;
-	font-size: 10pt;
-	background-color: #FFFACD;
+  padding: 5px;
+  margin: 5px;
+  font-size: 10pt;
+  background-color: #FFFACD;
 }
 
 
@@ -422,66 +422,66 @@ th {
 
 .fp-render-button
 {  
-	background: url('images/buttonbg1.jpg') #fff bottom left repeat-x;
-	padding: 5px;
-	padding-left: 20px;
-	padding-right: 20px;
-	border: 1px solid #BBBBBB;
-	display: inline-block;	
-	
-	margin-right: 10px;
-	/*min-width: 55px;	*/
+  background: url('images/buttonbg1.jpg') #fff bottom left repeat-x;
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 1px solid #BBBBBB;
+  display: inline-block;  
+  
+  margin-right: 10px;
+  /*min-width: 55px;  */
 }
 .fp-render-button:hover
 {
-	border: 1px solid #808080;
+  border: 1px solid #808080;
 }
 
 .fp-render-button:active
 {
-	background: url('images/buttonbg1-down.jpg') #fff top left repeat-x;
-	border: 1px solid #808080;
+  background: url('images/buttonbg1-down.jpg') #fff top left repeat-x;
+  border: 1px solid #808080;
 }
 
 
 .selectVariableClassHidden
 {
-	
-	visibility: hidden;
-	overflow: hidden;
-	background-color: #FFFFFF;
+  
+  visibility: hidden;
+  overflow: hidden;
+  background-color: #FFFFFF;
 }
 
 .selectVariableClass
 {
-	visibility: visible;
+  visibility: visible;
 }
 
 div.updateMsg
 {
-	border: 5px solid maroon;
-	background-color: white;
-	width: 200px;
-	text-align: center;
-	font-weight: bold;
-	z-index: 9999;
+  border: 5px solid maroon;
+  background-color: white;
+  width: 200px;
+  text-align: center;
+  font-weight: bold;
+  z-index: 9999;
 }
 
 .variableHoursList
 {
- 	position: absolute;
-	background-color: white;
-	border: 1px solid #333333;
-	width: 150px;
- 	/*z-index:12;*/
+  position: absolute;
+  background-color: white;
+  border: 1px solid #333333;
+  width: 150px;
+  /*z-index:12;*/
  }
  .variableHoursList a
  {
- 	text-decoration: none;
+  text-decoration: none;
  }
  .variableHoursList a:hover
  {
- 	font-weight: bold;
+  font-weight: bold;
  }
  
 
@@ -493,79 +493,79 @@ div.updateMsg
 
 .elevenpt
 {
-	font-size: 11pt;
-	font-family: Arial;
+  font-size: 11pt;
+  font-family: Arial;
 }
 
 .fixedlen
 {
-	font-family: Courier New;
-	font-size: 10pt;
+  font-family: Courier New;
+  font-size: 10pt;
 }
 
 .smallspace
 {
-	padding-left: 15px;
+  padding-left: 15px;
 }
 
 
 .viewSelectorActive
 {
-	font-weight: bold;
-	color: black;
-	text-decoration: none;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
 }
 
 .viewSelectorInactive
 {
-	font-weight: normal;
-	text-decoration: none;
+  font-weight: normal;
+  text-decoration: none;
 }
 .viewSelectorInactive:hover
 {
-	font-weight: normal;
-	text-decoration: none;
+  font-weight: normal;
+  text-decoration: none;
 }
 
 
 .superscript
 {
 /* mimic the apearance of a superscript */
-	font-size: 7pt;
-	position: relative;
-	top: -5px;
+  font-size: 7pt;
+  position: relative;
+  top: -5px;
 }
 
 .transfer_area
 {
-	background-color: white;
-	color: black;
-	border-style: solid;
-	border-color: gray;
-	width: 350px;
-	margin: 0px 0px 0px 0px;
-	padding: 0px 0px 0px 0px;
-	height: 150px;
-	font-size: 11px;
-	cursor: default;
+  background-color: white;
+  color: black;
+  border-style: solid;
+  border-color: gray;
+  width: 350px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  height: 150px;
+  font-size: 11px;
+  cursor: default;
 }
 
 a
 {
-	text-decoration: none; 
-	color: #0080ff;	
+  text-decoration: none; 
+  color: #0080ff; 
 }
 
 a:hover
 {
-	text-decoration: underline; 
+  text-decoration: underline; 
 }
 
 .falseLink
 {
-	text-decoration: none;
-	color: blue;
-	cursor: pointer;
+  text-decoration: none;
+  color: blue;
+  cursor: pointer;
 }
 
 
@@ -606,7 +606,7 @@ a:hover
 
 td.underline
 {
-	border-bottom: 1px solid black;
+  border-bottom: 1px solid black;
 }
 td.u
 {
@@ -631,28 +631,28 @@ td.u
  */
 .blueTitle
 {
-  color: white;	
-  background-color: #999 !important;	
+  color: white; 
+  background-color: #999 !important;  
 }
 
 .hypo
 {
-	background-color: #FDFFBB; 
-	color: black;
+  background-color: #FDFFBB; 
+  color: black;
 }
 
 .hypocolor
 {
-	color: black;
+  color: black;
 }
 
 table.blueBorder
 {
-	border-bottom: solid 2px  #999;	
-	border-right: solid 2px #999;
-	border-left: solid 2px #999;
-		
-	
+  border-bottom: solid 2px  #999; 
+  border-right: solid 2px #999;
+  border-left: solid 2px #999;
+    
+  
 }
 
 
@@ -790,28 +790,28 @@ td.score
 }
 
 .side_padding {
-	padding-left: 3px;
-	padding-right: 3px;
-	padding-top: 1px;
-	padding-bottom: 1px;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 
 
 .tab_padding {
-	padding-right: 3px;
+  padding-right: 3px;
 }
 
 .nounderlink
 {
-	color: #1d7bff;
-	text-decoration: none;
+  color: #1d7bff;
+  text-decoration: none;
 }
 
 .nounderlink:hover
 {
-	color: #1d7bff;
-	text-decoration: underline;
+  color: #1d7bff;
+  text-decoration: underline;
 }
 
 
@@ -1836,14 +1836,32 @@ ___student_mini_profile{}
 .student-mini-profile .profile-top-details-wrapper .profile-detail-line {
     font-size: 1.05em;
     margin-bottom: 10px;
-    z__border-bottom: 1px solid #ccc;
 }
+
+
 
 .student-mini-profile .profile-detail-line label {
     display: inline-block;
     min-width: 150px;
     font-weight: bold;
+    vertical-align: top;
 }
+
+.student-mini-profile .profile-top-details-wrapper .profile-detail-line-degree .profile-line-content {
+  display: inline-block;
+  width: 300px;
+  vertical-align: top;  
+}
+
+.student-mini-profile .profile-detail-line .multi-degree-title {
+  display: block;
+}
+
+.student-mini-profile .profile-detail-line .multi-degree-comma {
+  display: none;
+}
+
+
 
 #page-student-mini-profile-wrapper  {
   margin-left: 20px;
