@@ -1,6 +1,14 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-05-27
+  Changing some style issues when listing multiple degrees for a student.
+  
+  Change wording for select of tracks if you are required to select a certain number of tracks for a degree.
+  
+  Fixed bug where you couldn't override a semester block title unless you also had a course.
+  
+
 2021-05-25
   Added schools module to core, and made changes to system.install as well as other .install files, so that tables
   now have a school_id field and needed keys.
